<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/text_default_content_description"
        android:src="@drawable/ic_launcher_tw319qrc" />

    <TextView
        android:id="@+id/textViewAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/text_about_app_version"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewBuildDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_about_app_build_date"
        android:textSize="12sp" />

    <View
        android:id="@+id/ViewAboutSeparator0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textViewAppDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autoLink="web"
        android:text="@string/text_about_app_description"
        android:textSize="16sp" />

    <View
        android:id="@+id/ViewAboutSeparator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textViewAppCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:autoLink="web"
        android:text="@string/text_about_app_github"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonAboutOK"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@android:string/ok"
        android:textSize="16sp" />

</LinearLayout>
